--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,75 @@
     transform: rotate(360deg);
   }
 }
+
+.btn-primary,
+.text-primary {
+  color: #fff !important;
+}
+.btn-secondary,
+.text-secondary {
+  color: #600a0a !important;
+}
+
+.btn-primary {
+  background-color: #000;
+  border-color: #fff;
+  color: #fff !important;
+}
+
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary:hover {
+  background-color: #600a0a;
+  border-color: #600a0a;
+  color: #fff !important;
+}
+
+body {
+  background-color: #000;
+  color: #fff;
+}
+
+h1, h2, h3, h4, h5 {
+  color: #fff;
+}
+
+nav {
+  background-color: #000;
+  color: #fff;
+}
+
+nav.navbar-dark .navbar-nav .nav-link:hover {
+  color: #600a0a;
+}
+
+nav.navbar-dark .navbar-nav .nav-link {
+  font-size: 24px;
+}
+
+.visiting-hours {
+  background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../public/img/space-man.jpg) center 18% no-repeat;
+  background-size: cover;
+}
+
+.visiting-hours .list-group-item {
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+  background: rgba(0, 0, 0, .15);
+  border-color: rgba(255, 255, 255, .15);
+}
+
+.visiting-hours .table {
+  color: #fff;
+  background: rgba(0, 0, 0, .15);
+}
+
+.visiting-hours .table td {
+  padding: .5rem 1rem;
+  border-color: rgba(255, 255, 255, .15);
+}
+
+.visiting-hours .table tr:last-child td {
+  border: none;
+}
