Adding new color scheme link

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,10 @@
+// https://coolors.co/0f0d01-fefae0-6f6866-660a00-ff6666
 // https://coolors.co/606c38-283618-fefae0-47180b-2f243a
 // https://coolors.co/606c38-283618-fefae0-581e0e-95170e
 // https://coolors.co/606c38-283618-fefae0-dda15e-bc6c25
 
 // Override default variables before the import
-$body-bg: #283618;
+$body-bg: #0f0d01;
 
 // Import Bootstrap and its default variables
 @import '~bootstrap/scss/bootstrap.scss';
