Nav and Homepage, gradient

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -63,7 +63,8 @@
 --------------------------------------------------------------*/
 body {
     color: var(--default-color);
-    background-color: var(--background-color);
+    /*background-color: var(--background-color);*/
+    background-image: linear-gradient(rgba(51, 51, 51, 1) 0%, rgba(51, 51, 51, 0.8) 15%, rgba(51, 51, 51, 0.0) 100%);
     font-family: var(--default-font);
 }
 
@@ -634,7 +635,7 @@ h6 {
 section,
 .section {
     color: var(--default-color);
-    background-color: var(--background-color);
+
     padding: 60px 0;
     scroll-margin-top: 80px;
     overflow: clip;
