fixed some fonts and corrected address field

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,3 +41,15 @@ body {
 .yoga__text {
     text-align: left;
 }
+
+.dropdown__content {
+    visibility: hidden;
+}
+
+.donatehere__text {
+    text-align: center;
+}
+
+.italic__text {
+    font-style: italic;
+}
