--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,11 @@ body {
     color: #fefae1;
 }
 
+.address__button_link {
+    text-decoration: none;
+    color: #fefae1;
+}
+
 .pagetitle {
     text-decoration: none;
     color: #0f0d01;
